--- a/package.json
+++ b/package.json
@@ -4,16 +4,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
     "font-awesome": "^4.7.0",
-    "gh-pages": "^2.2.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-icons": "^3.10.0",
-    "react-scripts": "3.4.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
+    "react-scripts": "^4.0.3",
     "styled-components": "^5.1.1"
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
