Clean up + button animate :art:

--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "pomodoro",
+  "name": "pomodoro-timer",
   "homepage": "https://sgedye.github.io/pomodoro",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "font-awesome": "^4.7.0",
     "react": "^17.0.2",
     "react-countdown": "^2.3.2",
     "react-dom": "^17.0.2",
@@ -22,9 +21,6 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   },
   "browserslist": {
     "production": [
